welcome.lessons.welcome.bat.bool1.NearHundred.scala.error
nearHundred:2: error: value =< is not a member of Int
  if ((n >= 90 && n =< 110) || (190 =<  n && n =< 210)){return true} else {return false}} 
                    ^nearHundred:2: error: value =< is not a member of Int
  if ((n >= 90 && n =< 110) || (190 =<  n && n =< 210)){return true} else {return false}} 
                                    ^nearHundred:2: error: value =< is not a member of Int
  if ((n >= 90 && n =< 110) || (190 =<  n && n =< 210)){return true} else {return false}} 
                                               ^